[gd_scene load_steps=24 format=2]

[ext_resource path="res://PlayerFollow.gd" type="Script" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://GameOffCharacter.png" type="Texture" id=3]
[ext_resource path="res://ThaleahFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://UiTextBox.png" type="Texture" id=5]
[ext_resource path="res://TextSystem.gd" type="Script" id=6]
[ext_resource path="res://little-conquest.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://AudioManager.gd" type="Script" id=8]
[ext_resource path="res://sound.mp3" type="AudioStream" id=9]
[ext_resource path="res://Level1_Seen.ogg" type="AudioStream" id=10]
[ext_resource path="res://SandBackground.png" type="Texture" id=11]
[ext_resource path="res://Thaleah.tres" type="DynamicFont" id=12]

[sub_resource type="Animation" id=1]
resource_name = "BackwardNextScene"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("UiLayer/ColorRect3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/ColorRect:material:shader_param/radius_var")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.05 ]
}

[sub_resource type="Animation" id=2]
resource_name = "NextScene"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("UiLayer/ColorRect3:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/GameOffCharacter/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -89, -128 ), Vector2( -89, -8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/GameOffCharacter/Label2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -89, 112 ), Vector2( -89, -8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/ColorRect:material:shader_param/radius_var")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.008, 0.05 ]
}

[sub_resource type="Animation" id=11]
resource_name = "TheEnd"
tracks/0/type = "value"
tracks/0/path = NodePath("UiLayer/Label3:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 186 ), Vector2( 0, 80 ) ]
}

[sub_resource type="CanvasItemMaterial" id=4]
blend_mode = 1

[sub_resource type="Animation" id=5]
resource_name = "TextAppear"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("UiTextBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 140 ), Vector2( 160, 96 ), Vector2( 160, 100 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UiTextBox/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "TextDone"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("UiTextBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 100 ), Vector2( 160, 184 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 8
outline_color = Color( 0.0784314, 0.105882, 0.152941, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform float radius_var : hint_range(0.0, 0.1) = 0.05;
uniform float speed_var : hint_range(0.0, 5.0) = 1.5;
uniform float change_amount_var : hint_range(20.0, 80.0) = 50.0;

float circle(vec2 position, float radius, float feather, vec2 uv) {
	return smoothstep(radius, radius + feather, length(position - vec2(0.5)));
}

float pixelated(float a) {
	return a;
}

void fragment() {
	float a = circle(UV - vec2(0.0), radius_var+(sin(TIME*speed_var))/change_amount_var, 0.1, UV);
	a = min(a,pow(a,.5));
	pixelated(a);
	COLOR.a = a;
}
"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/radius_var = 0.05
shader_param/speed_var = 1.5
shader_param/change_amount_var = 80.0

[sub_resource type="Animation" id=10]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:material:shader_param/radius_var")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.05, 0.008 ]
}

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BackwardNextScene = SubResource( 1 )
anims/NextScene = SubResource( 2 )
anims/RestartText = SubResource( 3 )
anims/TheEnd = SubResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="GameOffCharacter" type="Sprite" parent="CanvasLayer" groups=[
"FakePlayer",
]]
position = Vector2( 93, 15 )
texture = ExtResource( 3 )
hframes = 3
vframes = 11
frame = 31

[node name="Label" type="Label" parent="CanvasLayer/GameOffCharacter"]
material = SubResource( 4 )
margin_left = -89.0
margin_top = -128.0
margin_right = 90.0
margin_bottom = -77.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "You died"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/GameOffCharacter"]
material = SubResource( 4 )
margin_left = -89.0
margin_top = 112.0
margin_right = 90.0
margin_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 4 )
text = "

Press any key to restart"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/GameOffCharacter" groups=[
"FakeBackground",
]]
show_behind_parent = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -339.0
margin_top = -335.5
margin_right = 291.0
margin_bottom = 303.5
color = Color( 0.12549, 0.203922, 0.341176, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="UiLayer" type="CanvasLayer" parent="."]

[node name="ColorRect3" type="ColorRect" parent="UiLayer" groups=[
"FakeBackground",
]]
show_behind_parent = true
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -303.0
margin_right = 495.0
margin_bottom = 336.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="UiLayer"]
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.011
margin_top = 186.0
margin_bottom = 61.02
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 12 )
text = "The King Ant

Made By: 
Pepper Boi
Forrest wilson iii
Anuman"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="UiLayer"]
anims/TextAppear = SubResource( 5 )
anims/TextDone = SubResource( 6 )

[node name="UiTextBox" type="Sprite" parent="UiLayer"]
modulate = Color( 0.462745, 0.462745, 0.462745, 1 )
position = Vector2( 160, 140 )
texture = ExtResource( 5 )
script = ExtResource( 6 )
queen_text = [ "queen text 1", "queen text 2", "vuifiluf", "dfhlfeiulhcderiohvliu", "fligidyboo" ]

[node name="Label" type="Label" parent="UiLayer/UiTextBox"]
anchor_top = 0.00520181
anchor_bottom = 0.00520181
margin_left = -91.0
margin_top = 44.0637
margin_right = 91.0
margin_bottom = 91.0637
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0784314, 0.105882, 0.152941, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "I always wondered why we invented these trapdoors in the first place..."
align = 1
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UiLayer/UiTextBox"]

[node name="Node2D" type="Node2D" parent="."]
z_index = 20
script = ExtResource( 1 )
fake_player = NodePath("../CanvasLayer/GameOffCharacter")

[node name="ColorRect" type="ColorRect" parent="Node2D" groups=[
"Light",
]]
modulate = Color( 1, 1, 1, 0.784314 )
material = SubResource( 9 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -320.0
margin_right = 320.0
margin_bottom = 320.0
size_flags_vertical = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -320.0
margin_right = 320.0
margin_bottom = 320.0
color = Color( 0, 0, 0, 0.482353 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D"]
anims/PlayerDeath = SubResource( 10 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 500

[node name="Song" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -25.0
autoplay = true
script = ExtResource( 8 )

[node name="Crouch" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="EnemyStep" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="Alarmed" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="JumpUp" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="JumpLand" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="Victory" type="AudioStreamPlayer2D" parent="Song"]
stream = ExtResource( 9 )
volume_db = -80.0

[node name="SandBackground" type="Sprite" parent="."]
position = Vector2( -3, -9 )
z_index = -50
texture = ExtResource( 11 )
region_enabled = true
region_rect = Rect2( 128, 128, 20000, 20000 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="UiLayer/AnimationPlayer" to="UiLayer/UiTextBox" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="UiLayer/UiTextBox/Timer" to="UiLayer/UiTextBox" method="letter_appear"]
